fix habit subtitle alignment

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -53,10 +53,11 @@ a, a:hover {
     line-height: 13px;;
   }
   .title {
-    margin-top: 14px;
+    margin-top: 8px;
   }
   .title, .sub-title {
-    line-height: 13px;
+    line-height: 19px;
+    display: block;
   }
   .sub-title {
     font-size: 8px
